fixing overflow hidden chopping off titles in ul li list

--- a/wbj-twentyseventeen/main.scss
+++ b/wbj-twentyseventeen/main.scss
@@ -132,9 +132,9 @@ $medium_desktop_size:"only screen and (min-width:881px) and (max-width:1300px)";
       }
 
       .title {
-        min-height:40px;
+        min-height:47px;
         margin:1em 0 1.5em 0;
-        max-height:40px;
+        max-height:47px;
         text-align:center;
         overflow:hidden;
 
